[package]
name = "cairn-core"
description = "Cairn application core: the AppState model and the pure TEA reducer (no I/O)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
# Zeroizing secret types: the vault-unlock overlay holds the typed passphrase in a `SecretString`
# (masked, never logged, wiped on drop) carried by `AppEffect::UnlockVault` to the effect runner.
cairn-secrets = { workspace = true }
zeroize = "1"
# `Uuid` is used by `ConnectionKind::Profile { id }` to hold the stable profile UUID,
# keeping `cairn-core` free of `cairn-config` types while still naming the profile precisely.
# Same version as `cairn-config`; Cargo resolves a single copy in the workspace.
# FIXME(arch): if `ConnectionKind` migrates to `cairn-types`, this dep moves with it.
uuid = { version = "1", default-features = false }
# FIXME(arch): the reducer holds an AI `Plan` in `Overlay::AiPlan`, so it depends on cairn-ai.
# Consider promoting the pure plan data types to cairn-types so the core stays dependency-light.
cairn-ai = { workspace = true }

[dev-dependencies]
serde_json = "1"
