[package]
name = "cairn-plugin"
description = "Cairn's sandboxed WASM plugin host (wasmtime): resource-limited, capability-gated execution."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
async-trait = "0.1"
# `WriteSink::write_chunk` takes a `bytes::Bytes`; same crate/version cairn-vfs uses for that trait.
bytes = "1"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
wasmtime = { version = "46.0.1", default-features = false, features = [
    "cranelift",
    "wat",
    "runtime",
    "component-model",
] }
# Provides the WASI 0.2 imports a std-built guest component references. The host grants an EMPTY,
# ambient-authority-free context (no preopened dirs, no env, null stdio, no network) — no ambient
# filesystem/secret/network access; finer capability gating per manifest grant is M8-4/M8-5. (NB:
# default-features=false does not shrink the dep tree — wasmtime-wasi's cap-std/etc. are mandatory.)
wasmtime-wasi = { version = "46.0.1", default-features = false }

[dev-dependencies]
# "time" is required for `tokio::time::timeout` in the ImmediatelyReady test.
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread", "time"] }
futures = "0.3"
