[package]
name = "cairn-secrets"
description = "Secret-handling primitives for Cairn: zeroizing secret types and log redaction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
secrecy = "0.10"
zeroize = "1"
regex = "1"
