[package]
name = "cairn-tui"
description = "Cairn terminal UI: ratatui rendering of the AppState and the input keymap."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cairn-core = { workspace = true }
cairn-types = { workspace = true }
cairn-ai = { workspace = true }
ratatui = "0.30"

[dev-dependencies]
serde_json = "1"
