[package]
name = "cairn-tui"
description = "Cairn terminal UI: ratatui rendering of the AppState and the input keymap."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cairn-core = { workspace = true }
cairn-types = { workspace = true }
cairn-ai = { workspace = true }
ratatui = "0.30"
# Used by the `scenarios` module to construct AI-plan fixtures (a `PlanStep`'s input is a
# `serde_json::Value`). Small, permissive (Apache-2.0 OR MIT), already ubiquitous in the tree.
serde_json = "1"

[dev-dependencies]
# Snapshot testing: renders each UI scenario to a plain-text frame and diffs it against a checked-in
# `.snap` file, so a rendering regression is a readable ASCII diff. The de-facto Rust snapshot crate;
# permissive (Apache-2.0 OR MIT), widely used, actively maintained. Dev-only — not in the binary.
insta = "1"
