[package]
name = "cairn-vault"
description = "Cairn's encrypted secrets vault: XChaCha20-Poly1305 at rest, Argon2id-derived keys."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
cairn-types = { workspace = true }
cairn-secrets = { workspace = true }
argon2 = "0.5"
# `zeroize` is opt-in since 0.11 (it was default in 0.10); keep it so the cipher's internal key copy
# is wiped on drop (CLAUDE.md §9 — don't drop this feature when trimming).
chacha20poly1305 = { version = "0.11", features = ["zeroize"] }
getrandom = "0.4"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
