[package]
name = "cairn-vault"
description = "Cairn's encrypted secrets vault: XChaCha20-Poly1305 at rest, Argon2id-derived keys."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# OS-keychain unlock for the vault passphrase (Secret Service on Linux, Keychain on macOS,
# Credential Manager on Windows) via `keyring` 4.x. OFF by default so the lean/default and headless
# builds don't pull the platform secret-store stack (dbus/zbus, security-framework, windows) — per
# ADR-0006. The passphrase unlock path is always available regardless of this feature.
keychain = ["dep:keyring"]
# Exposes `MockUnlockProvider` to dependent crates' tests (e.g. the broker's unlock-flow tests).
test-utils = []

[dependencies]
cairn-types = { workspace = true }
cairn-secrets = { workspace = true }
argon2 = "0.5"
# `zeroize` is opt-in since 0.11 (it was default in 0.10); keep it so the cipher's internal key copy
# is wiped on drop (CLAUDE.md §9 — don't drop this feature when trimming).
chacha20poly1305 = { version = "0.11", features = ["zeroize"] }
getrandom = "0.4"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
# OS keychain access for `KeychainUnlockProvider` (behind the non-default `keychain` feature). The
# all-in-one `keyring` 4.x façade auto-selects the right platform store (Secret Service on Linux via
# zbus, security-framework on macOS, Credential Manager on Windows). Its error type is re-exported
# from `keyring-core`, so our error mapping is shared with the hermetic mock test. MIT OR Apache-2.0.
keyring = { version = "4", optional = true }

[dev-dependencies]
tempfile = "3"
# keyring-core ships an in-memory mock credential store used to test `KeychainUnlockProvider`
# hermetically (no real OS keychain). It is a (light, platform-dep-free) transitive dep of `keyring`;
# declared here so the `keychain`-gated test can build entries against the mock store directly.
# Keep this major in lockstep with the `keyring-core` that `keyring` depends on: the test shares the
# `keyring::Error` type (re-exported from keyring-core), so a split would break compilation loudly.
keyring-core = "1"
