[package]
name = "cairn-vfs"
description = "The Cairn virtual filesystem abstraction: the Vfs trait, capability model, handles, and registry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# Exposes MockVfs and other test utilities to dependent crates' tests.
test-utils = []

[dependencies]
cairn-types = { workspace = true }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
smol_str = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "sync", "time", "macros", "rt"] }
