[package]
name = "cairn"
description = "A modern terminal file manager for every filesystem — local, SSH, S3, GCS, Azure, Docker, and Kubernetes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "cairn"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cairn-core = { workspace = true }
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
cairn-backend-local = { workspace = true }
cairn-transfer = { workspace = true }
cairn-tui = { workspace = true }
cairn-ai = { workspace = true }
cairn-config = { workspace = true }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
    "io-util",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Safe process-group kill for shell-action timeouts (no `unsafe`). Already in the dependency tree.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
