[package]
name = "cairn"
description = "A modern terminal file manager for every filesystem — local, SSH, S3, GCS, Azure, Docker, and Kubernetes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "cairn"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Per-backend feature umbrellas. Each turns on the backend crate (an optional dep) *and* its own
# live-transport feature, so the lean default build (no backends) never pulls a backend SDK
# (russh / aws-sdk / google-cloud / azure) — preserving the cross-platform lean build (ADR-0006).
# The broker-backed connection opener (`src/connect.rs`) is always compiled; only the per-scheme
# connect calls are gated by these features.
ssh = ["dep:cairn-backend-ssh", "cairn-backend-ssh/ssh"]
s3 = ["dep:cairn-backend-object", "cairn-backend-object/s3"]
gcs = ["dep:cairn-backend-object", "cairn-backend-object/gcs"]
azure = ["dep:cairn-backend-object", "cairn-backend-object/azure"]
# Docker/K8s connect without a vault credential (local socket / kubeconfig).
docker = ["dep:cairn-backend-docker", "cairn-backend-docker/docker"]
k8s = ["dep:cairn-backend-k8s", "cairn-backend-k8s/k8s"]
# Convenience umbrellas.
cloud = ["s3", "gcs", "azure"]
containers = ["docker", "k8s"]
all-backends = ["ssh", "cloud", "containers"]

[dependencies]
cairn-core = { workspace = true }
cairn-types = { workspace = true }
cairn-vfs = { workspace = true }
cairn-backend-local = { workspace = true }
# The capability broker resolves a profile's credential reference to a secret for the connection
# opener. Always on: it is pure-Rust and pulls no backend SDK (it is the binary's execution-layer
# secret boundary; the AI/plugin isolation is enforced via the secret-free `cairn-broker-api`).
cairn-broker = { workspace = true }
# The secrets vault: opened (decrypted) by the M3-7 vault-unlock flow and installed into the broker.
# Pure-Rust crypto (Argon2id + XChaCha20-Poly1305); the OS-keychain stack stays behind its own
# `keychain` feature, so this does not pull a platform secret-store into the default build.
cairn-vault = { workspace = true }
# The zeroizing `SecretString` carried by `AppEffect::UnlockVault` (the unlock-effect signature names
# it directly; same type cairn-core/cairn-vault re-export).
cairn-secrets = { workspace = true }
# Credential-bearing backends, behind the features above (off by default so the lean build is SDK-free).
cairn-backend-ssh = { workspace = true, optional = true }
cairn-backend-object = { workspace = true, optional = true }
cairn-backend-docker = { workspace = true, optional = true }
cairn-backend-k8s = { workspace = true, optional = true }
cairn-transfer = { workspace = true }
cairn-tui = { workspace = true }
cairn-ai = { workspace = true }
cairn-config = { workspace = true }
thiserror = "2"
anyhow = "1"
# `bytes::Bytes` is the stdin channel payload type on `SessionHandle` (cairn-vfs); the effect runner
# forwards it directly from `SendSessionInput` — no copy needed.
bytes = "1"
async-trait = "0.1"
# uuid: stable profile IDs in ConnectionDescriptor / ConnectionKind::Profile. No features needed
# for the binary side (the UUIDs come from cairn-config which owns generation).
uuid = { version = "1", default-features = false }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
    "io-util",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Safe process-group kill for shell-action timeouts (no `unsafe`). Already in the dependency tree.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# The connection-opener / vault-unlock tests build a vault + typed credentials to exercise the
# resolve → dispatch path hermetically (no live servers). Both `cairn-vault` and `cairn-secrets` are
# normal dependencies now (the unlock flow opens the vault and names `SecretString`).
