# Standalone (its own `[workspace]`) so the parent workspace never tries to build it for host
# targets. Built locally with `cargo component build --release` (wasm32-wasip2); the resulting
# component is committed at ../fixtures/backend.wasm so CI needs no WASM toolchain. See RFC-0006.
[workspace]

[package]
name = "cairn-plugin-fixture"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
# Provides GlobalDlmalloc: a wasm32-compatible allocator that uses `memory.grow` (no WASI
# imports). Required for the no_std build: without std, Rust does not supply a global allocator.
dlmalloc = { version = "0.2", features = ["global"] }

[package.metadata.component]
package = "cairn:plugin-fixture"

[package.metadata.component.target]
world = "backend-plugin"

[profile.release]
opt-level = "s"
strip = true
